# CampusIQ

./: .env.example  .gitignore  README.md  app.json  package-lock.json  package.json  update_campus_coordinates.py  update_paths.py
app/: _layout.tsx  emergency.tsx  scan.tsx  snap.tsx
app/(tabs)/: _layout.tsx  buildings.tsx  index.tsx  map.tsx  profile.tsx
app/building/: [id].tsx
backend/: .env.example  INTEGRATION_GUIDE.md  MCP_DEPLOYMENT_SUMMARY.md  MCP_README.md  README.md  claude_config_example.json  claude_config_uvx_example.json  mcp_server.py  pyproject.toml  requirements.txt  run.sh  setup_mcp.bat  setup_mcp.sh  test_mcp.py
backend/app/: agent.py  data.py  main.py  observability.py  routing.py  tools.py  vision.py
backend/data/: campus.json
backend/eval/: golden.json
backend/scripts/: export_campus.js
backend/tests/: conftest.py  test_agent_golden.py  test_routing.py
components/buildings/: AccessibilityBadges.tsx  BuildingCard.tsx  HoursDisplay.tsx  index.ts
components/chat/: ChatBubble.tsx  ChatInput.tsx  QuickActions.tsx  RouteCard.tsx  TypingIndicator.tsx  index.ts
components/map/: BuildingPopup.tsx  CampusMapView.tsx  CampusSvgMap.tsx  (+1 more)
constants/: campus.ts  campusFeatures.ts  colors.ts
hooks/: index.ts  useBuildings.ts  useChat.ts  useLocation.ts  useOffline.ts  useProactiveNudges.ts  useTurnByTurnSpeech.ts  useVoiceInput.ts
i18n/: index.ts  locales.ts
services/: api.ts  notifications.ts  offlineCache.ts  pulse.ts  routing.ts  speech.ts  weather.ts
store/: chatStore.ts  index.ts  mapStore.ts  userStore.ts
types/: index.ts
(+8 files in other folders)
